--- a/app/src/main/res/drawable/profile_background_image.xml
+++ b/app/src/main/res/drawable/profile_background_image.xml
@@ -1,8 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="393dp"
     android:height="819dp"
     android:viewportWidth="393"
-    android:viewportHeight="819">
+    android:viewportHeight="819"
+    tools:ignore="VectorRaster">
   <path
       android:pathData="M0,20C0,8.95 8.95,0 20,0H373C384.05,0 393,8.95 393,20V792C393,803.05 384.05,812 373,812H20C8.95,812 0,803.05 0,792V20Z"
       android:fillColor="#EFEBEB"/>
