--- a/app/src/main/res/layout/fragment_profile_admin.xml
+++ b/app/src/main/res/layout/fragment_profile_admin.xml
@@ -12,7 +12,7 @@
         android:id="@+id/user_photo"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/user_photo___"
         android:scaleType="centerCrop"
         android:src="@drawable/profile_default_image"
@@ -280,9 +280,9 @@
         android:id="@+id/fragment_menu_container_admin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/icon_menu"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
