--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,19 +25,20 @@
         android:id="@+id/fragment_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/logoSmall"
+        android:paddingBottom="8dp"
         app:layout_constraintBottom_toTopOf="@id/footer"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/logoSmall" />
 
     <!-- Footer with 5 icons -->
     <LinearLayout
         android:id="@+id/footer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
         android:background="@color/white"
+        android:gravity="center"
+        android:orientation="horizontal"
         android:padding="13dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,9 +50,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/icon_feed"
             android:contentDescription="Home"
-            android:onClick="onIconClick" />
+            android:onClick="onIconClick"
+            android:src="@drawable/icon_feed" />
 
         <!-- Historic Icon -->
         <ImageView
@@ -59,9 +60,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/icon_historic"
             android:contentDescription="Feed"
-            android:onClick="onIconClick" />
+            android:onClick="onIconClick"
+            android:src="@drawable/icon_historic" />
 
         <!-- Add Icon -->
         <ImageView
@@ -69,9 +70,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/icon_add"
             android:contentDescription="Add"
-            android:onClick="onIconClick" />
+            android:onClick="onIconClick"
+            android:src="@drawable/icon_add" />
 
         <!-- Ranking Icon -->
         <ImageView
@@ -79,9 +80,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/icon_ranking"
             android:contentDescription="Ranking"
-            android:onClick="onIconClick" />
+            android:onClick="onIconClick"
+            android:src="@drawable/icon_ranking" />
 
         <!-- Profile Icon -->
         <ImageView
@@ -89,9 +90,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/icon_profile"
             android:contentDescription="Profile"
-            android:onClick="onIconClick" />
+            android:onClick="onIconClick"
+            android:src="@drawable/icon_profile" />
 
     </LinearLayout>
 
