--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -11,84 +9,61 @@
         android:background="@drawable/background_rounded"
         android:padding="8dp">
 
-    <TextView
-        android:id="@+id/item_edit_profile"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/league_spartan_medium"
-        android:text="@string/editar_perfil_"
-        android:padding="16dp"
-        android:textColor="@android:color/white"
-        android:textSize="22sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <TextView
+            android:id="@+id/item_edit_profile"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/league_spartan_medium"
+            android:padding="16dp"
+            android:text="@string/editar_perfil_"
+            android:textColor="@android:color/white"
+            android:textSize="22sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:layout_width="180dp"
-        android:layout_height="3dp"
-        android:background="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@id/item_edit_profile"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <View
+            android:layout_width="180dp"
+            android:layout_height="3dp"
+            android:background="@android:color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/item_edit_profile" />
 
-    <TextView
-        android:id="@+id/item_dashboard"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/league_spartan_medium"
-        android:text="@string/dashboard_"
-        android:padding="16dp"
-        android:textColor="@android:color/white"
-        android:textSize="22sp"
-        app:layout_constraintTop_toBottomOf="@id/item_edit_profile"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <TextView
+            android:id="@+id/item_logout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/league_spartan_medium"
+            android:padding="16dp"
+            android:text="Logout"
+            android:textColor="@android:color/white"
+            android:textSize="22sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/item_edit_profile" />
 
-    <View
-        android:layout_width="180dp"
-        android:layout_height="3dp"
-        android:background="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@id/item_dashboard"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <View
+            android:layout_width="180dp"
+            android:layout_height="3dp"
+            android:background="@android:color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/item_logout" />
 
-    <TextView
-        android:id="@+id/item_logout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/league_spartan_medium"
-        android:text="Logout"
-        android:padding="16dp"
-        android:textColor="@android:color/white"
-        android:textSize="22sp"
-        app:layout_constraintTop_toBottomOf="@id/item_dashboard"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <TextView
+            android:id="@+id/item_delete_account"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/league_spartan_medium"
+            android:padding="16dp"
+            android:text="Apagar conta"
+            android:textColor="@android:color/white"
+            android:textSize="22sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/item_logout" />
 
-    <View
-        android:layout_width="180dp"
-        android:layout_height="3dp"
-        android:background="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@id/item_logout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/item_delete_account"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/league_spartan_medium"
-        android:text="Apagar conta"
-        android:textColor="@android:color/white"
-        android:padding="16dp"
-        android:textSize="22sp"
-        app:layout_constraintTop_toBottomOf="@id/item_logout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
-    </FrameLayout>
-
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
