--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
         android:id="@+id/titleLogin"
         android:layout_width="256dp"
         android:layout_height="74dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="75dp"
         android:fontFamily="@font/league_spartan_medium"
         android:text="@string/titulo_boas_vindas"
         android:textColor="#CC0676"
@@ -34,7 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.27"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logoSmall" />
+        app:layout_constraintTop_toBottomOf="@id/logoSmall"/>
 
 
     <!-- Text -->
@@ -58,9 +58,9 @@
     <EditText
         android:id="@+id/emailInput"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:hint="@string/email_hint"
@@ -79,21 +79,21 @@
         android:layout_width="200dp"
         android:layout_height="19dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="25dp"
         android:fontFamily="@font/league_spartan_medium"
         android:text="@string/esqueceu_password"
         android:textColor="#61CC0676"
         android:textColorLink="#CC0676"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/passwordInput" />
 
     <EditText
         android:id="@+id/passwordInput"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_input_background"
         android:hint="@string/password_hint"
@@ -110,13 +110,9 @@
         android:id="@+id/loginButton"
         android:layout_width="344dp"
         android:layout_height="48dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/button_with_shadow"
         android:fontFamily="@font/league_spartan_medium"
-        android:paddingTop="0dp"
-        android:paddingBottom="5dp"
         android:text="@string/login_button_text"
         android:textAllCaps="false"
         android:textAlignment="center"
@@ -124,25 +120,20 @@
         android:textColorLink="#5E48ED53"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/passwordInput" />
+        app:layout_constraintTop_toBottomOf="@id/passwordInput"/>
 
     <TextView
         android:id="@+id/createAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="132dp"
         android:fontFamily="@font/league_spartan_medium"
         android:text="@string/create_account_text"
         android:textColor="#25183E"
-        android:textSize="15sp"
+        android:textSize="16sp"
+        android:layout_marginBottom="130dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <!-- Login Button -->
-
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginButton"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
