--- a/app/src/main/res/layout/item_card_view.xml
+++ b/app/src/main/res/layout/item_card_view.xml
@@ -10,7 +10,8 @@
         android:layout_height="165dp"
         android:background="@android:color/white"
         app:cardCornerRadius="40dp"
-        android:layout_margin="8dp"
+        android:layout_margin="14dp"
+        android:layout_marginStart="10dp"
         app:cardElevation="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
